--- a/2_notebooks/features/L1_FEATURESELECTION_LINSVC.ipynb
+++ b/2_notebooks/features/L1_FEATURESELECTION_LINSVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -14,7 +14,7 @@
        "(2377, 127)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "(690, 127)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -89,10 +89,10 @@
     {
      "data": {
       "text/plain": [
-       "(690, 31)"
+       "(690, 32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -123,12 +123,13 @@
        "       'Femoral Component Flexion', 'Posterior Tibial Slope', 'DEVIMP_PSRP',\n",
        "       'DEVIMP_CRFB', 'DEVIMP_CRRP', 'SRG_APPROACH_MEDIAL_PARAPATELLAR',\n",
        "       'SRG_APPROACH_TRIVECTOR', 'PAT_MANAGE_EVERTED', 'PAT_MANAGE_SUBLUXED',\n",
-       "       'RESECTION_MEASURED', 'ANTI_CEMENT', 'ST_NONE_YN', 'ST_SYN_YN',\n",
-       "       'ST_DEEP_MCL_YN', 'ST_POST_MED_CAP_YN', 'preop KS_PAIN_STAIRS'],\n",
+       "       'RESECTION_GAPBALANCE', 'ANTI_CEMENT', 'ST_NONE_YN', 'ST_SYN_YN',\n",
+       "       'ST_DEEP_MCL_YN', 'ST_POST_MED_CAP_YN', 'preop PKIP modify',\n",
+       "       'preop KS_PAIN_STAIRS'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -150,41 +151,42 @@
     {
      "data": {
       "text/plain": [
-       "SEX                                 0.145519\n",
-       "RC_WHT                              0.173807\n",
-       "RC_HISPLAT                          0.030744\n",
-       "PTRT_NONE_YN                        0.035821\n",
+       "SEX                                 0.143515\n",
+       "RC_WHT                              0.179088\n",
+       "RC_HISPLAT                          0.030903\n",
+       "PTRT_NONE_YN                        0.035813\n",
        "PTRT_ARTHRO_YN                      0.000000\n",
-       "PTRT_INTRA_INJECT_YN                0.201269\n",
-       "GM_BACK_PAIN_YN                     0.041876\n",
-       "GM_END_METABLIC_YN                  0.169710\n",
-       "GM_GENIT_DIS_YN                     0.082398\n",
-       "GM_HEENT_YN                         0.037814\n",
-       "GM_RESP_DIS_YN                      0.036058\n",
-       "GM_OTHER_YN                         0.093481\n",
-       "AP Alignment Angle                  0.007634\n",
-       "Distal Femoral Angle                0.002768\n",
-       "Proximal Tibial Angle               0.009992\n",
-       "Femoral Component Flexion           0.000914\n",
-       "Posterior Tibial Slope              0.006562\n",
-       "DEVIMP_PSRP                         0.000000\n",
-       "DEVIMP_CRFB                         0.258430\n",
-       "DEVIMP_CRRP                         0.152120\n",
+       "PTRT_INTRA_INJECT_YN                0.201918\n",
+       "GM_BACK_PAIN_YN                     0.042756\n",
+       "GM_END_METABLIC_YN                  0.169647\n",
+       "GM_GENIT_DIS_YN                     0.082588\n",
+       "GM_HEENT_YN                         0.036072\n",
+       "GM_RESP_DIS_YN                      0.035664\n",
+       "GM_OTHER_YN                         0.094574\n",
+       "AP Alignment Angle                  0.009793\n",
+       "Distal Femoral Angle                0.002201\n",
+       "Proximal Tibial Angle               0.011031\n",
+       "Femoral Component Flexion           0.002225\n",
+       "Posterior Tibial Slope              0.006258\n",
+       "DEVIMP_PSRP                         0.041094\n",
+       "DEVIMP_CRFB                         0.259391\n",
+       "DEVIMP_CRRP                         0.154067\n",
        "SRG_APPROACH_MEDIAL_PARAPATELLAR    0.000000\n",
-       "SRG_APPROACH_TRIVECTOR              0.555018\n",
+       "SRG_APPROACH_TRIVECTOR              0.556966\n",
        "PAT_MANAGE_EVERTED                  0.000000\n",
-       "PAT_MANAGE_SUBLUXED                 0.143654\n",
-       "RESECTION_MEASURED                  0.238565\n",
-       "ANTI_CEMENT                         0.019957\n",
+       "PAT_MANAGE_SUBLUXED                 0.361314\n",
+       "RESECTION_GAPBALANCE                0.085777\n",
+       "ANTI_CEMENT                         0.000000\n",
        "ST_NONE_YN                          0.000000\n",
-       "ST_SYN_YN                           0.206656\n",
-       "ST_DEEP_MCL_YN                      0.057132\n",
-       "ST_POST_MED_CAP_YN                  0.041461\n",
+       "ST_SYN_YN                           0.206486\n",
+       "ST_DEEP_MCL_YN                      0.056599\n",
+       "ST_POST_MED_CAP_YN                  0.041409\n",
+       "preop PKIP modify                   0.068675\n",
        "preop KS_PAIN_STAIRS                0.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
