--- a/2_notebooks/features/L1_FEATURESELECTION_PCA.ipynb
+++ b/2_notebooks/features/L1_FEATURESELECTION_PCA.ipynb
@@ -105,18 +105,18 @@
      "data": {
       "text/plain": [
        "array([[  1.02437556e+01,  -5.81290300e-01,  -2.34809456e+00, ...,\n",
-       "         -2.13475275e-03,  -5.16710950e-01,  -1.03123273e-01],\n",
+       "         -1.15215607e-01,  -5.41925996e-01,  -4.25910136e-03],\n",
        "       [  1.04830126e+01,   1.63837998e+00,  -3.52299175e+00, ...,\n",
-       "          9.76293794e-02,  -1.93196679e-02,  -8.23613520e-02],\n",
+       "          3.14778355e-02,  -8.58802272e-02,  -7.54106035e-02],\n",
        "       [  1.03154483e+01,  -9.73527744e-01,  -4.22371369e+00, ...,\n",
-       "         -2.97912958e-01,  -2.28122454e-01,  -3.32655122e-01],\n",
+       "         -3.12656967e-01,  -1.70628621e-01,  -2.84479135e-01],\n",
        "       ..., \n",
        "       [  8.88559768e+00,  -1.87387855e+00,   3.60486323e+00, ...,\n",
-       "          4.34650228e-01,   2.01743305e-01,  -1.55199259e-02],\n",
+       "          5.26064863e-01,   7.92266039e-02,  -3.67810277e-02],\n",
        "       [  1.23372955e+01,  -5.60638035e-01,  -2.65412434e+00, ...,\n",
-       "          4.58415383e-01,   1.47356270e-01,   3.80378158e-02],\n",
+       "          5.09470391e-01,   6.27130981e-02,   4.60989132e-02],\n",
        "       [  8.46195602e+00,  -3.40317219e+00,  -3.58705075e-01, ...,\n",
-       "         -1.14040027e-01,  -4.45255769e-01,  -3.50604780e-01]])"
+       "         -1.44410864e-01,  -4.99696854e-01,  -3.53535785e-01]])"
       ]
      },
      "execution_count": 5,
@@ -141,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "0.96139595530481126"
+       "0.96139595868479633"
       ]
      },
      "execution_count": 6,
@@ -167,46 +167,46 @@
      "data": {
       "text/plain": [
        "Proximal Tibial Angle     0.619323\n",
-       "GM_GENIT_DIS_YN           0.617519\n",
-       "GM_CANCER_YN              0.601156\n",
-       "GM_BACK_PAIN_YN           0.535905\n",
-       "GM_DEPRESS_YN             0.509274\n",
-       "GM_HYPCHOL_YN             0.492022\n",
-       "GM_DIABETES_YN            0.490976\n",
-       "PTRT_INTRA_INJECT_YN      0.484295\n",
+       "GM_GENIT_DIS_YN           0.617006\n",
+       "GM_CANCER_YN              0.601257\n",
+       "GM_BACK_PAIN_YN           0.536008\n",
+       "GM_DEPRESS_YN             0.509266\n",
+       "GM_HYPCHOL_YN             0.492012\n",
+       "GM_DIABETES_YN            0.490796\n",
+       "PTRT_INTRA_INJECT_YN      0.484307\n",
        "ST_DEEP_MCL_YN            0.481986\n",
-       "PTRT_ARTHRO_YN            0.430310\n",
-       "GM_CARDIO_YN              0.427223\n",
-       "GM_HEENT_YN               0.400713\n",
+       "PTRT_ARTHRO_YN            0.430309\n",
+       "GM_CARDIO_YN              0.427225\n",
+       "GM_RENAL_DIS_YN           0.410552\n",
+       "GM_HEENT_YN               0.400824\n",
        "ST_POST_MED_CAP_YN        0.400568\n",
-       "GM_RENAL_DIS_YN           0.388163\n",
-       "ST_POST_LAT_CAP_YN        0.384366\n",
-       "PTRT_MENIS_YN             0.367121\n",
-       "GM_GASTRO_DIS_YN          0.361970\n",
-       "SRG_APPROACH_MIDVASTUS    0.356168\n",
+       "PTRT_MENIS_YN             0.366682\n",
+       "ST_POST_LAT_CAP_YN        0.365616\n",
+       "GM_GASTRO_DIS_YN          0.361965\n",
+       "SRG_APPROACH_MIDVASTUS    0.356728\n",
        "PAT_MANAGE_EVERTED        0.351630\n",
        "ANTI_CEMENT               0.344051\n",
-       "GM_OTHER_YN               0.341073\n",
+       "GM_OTHER_YN               0.341079\n",
+       "GM_HEMA_DIS_YN            0.332881\n",
        "DEVIMP_PSFB               0.330203\n",
-       "AP Alignment Angle        0.322634\n",
-       "GM_GOUT_YN                0.320534\n",
-       "GM_RESP_DIS_YN            0.320437\n",
-       "GM_HYPTN_YN               0.310954\n",
-       "GM_NONE_YN                0.310080\n",
+       "AP Alignment Angle        0.322633\n",
+       "GM_RESP_DIS_YN            0.320442\n",
+       "GM_NONE_YN                0.311526\n",
+       "GM_HYPTN_YN               0.310955\n",
+       "GM_OSTEO_YN               0.308356\n",
        "SEX                       0.301542\n",
-       "GM_OSTEO_YN               0.298378\n",
        "RESECTION_GAPBALANCE      0.295118\n",
-       "DEVIMP_CRFB               0.292916\n",
+       "DEVIMP_CRFB               0.292915\n",
        "PTRT_NONE_YN              0.290182\n",
-       "ST_SYN_YN                 0.282940\n",
-       "GM_HEMA_DIS_YN            0.280553\n",
-       "preop PKIP modify         0.278240\n",
-       "preop KS_PAT_SAT1         0.277341\n",
-       "GM_END_METABLIC_YN        0.275926\n",
+       "ST_SYN_YN                 0.282944\n",
+       "GM_END_METABLIC_YN        0.275877\n",
+       "preop PKIP modify         0.275645\n",
        "PAT_RESURFACE             0.268084\n",
        "Unnamed: 90               0.268084\n",
-       "SRG_APPROACH_TRIVECTOR    0.262520\n",
-       "Distal Femoral Angle      0.253958\n",
+       "GM_GOUT_YN                0.265952\n",
+       "SRG_APPROACH_TRIVECTOR    0.262518\n",
+       "Distal Femoral Angle      0.253961\n",
+       "ST_NONE_YN                0.251376\n",
        "dtype: float64"
       ]
      },
