--- a/2_notebooks/features/S_FS_PCA.ipynb
+++ b/2_notebooks/features/S_FS_PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
        "(2377, 127)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "(690, 127)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -105,21 +105,21 @@
      "data": {
       "text/plain": [
        "array([[  1.02437556e+01,  -5.81290300e-01,  -2.34809456e+00, ...,\n",
-       "         -1.15215607e-01,  -5.41925996e-01,  -4.25910136e-03],\n",
+       "          2.56851220e-02,  -4.84586773e-01,  -2.00300475e-02],\n",
        "       [  1.04830126e+01,   1.63837998e+00,  -3.52299175e+00, ...,\n",
-       "          3.14778355e-02,  -8.58802272e-02,  -7.54106035e-02],\n",
+       "          5.22347276e-02,  -7.06637827e-02,  -7.92632969e-02],\n",
        "       [  1.03154483e+01,  -9.73527744e-01,  -4.22371369e+00, ...,\n",
-       "         -3.12656967e-01,  -1.70628621e-01,  -2.84479135e-01],\n",
+       "         -2.16753552e-01,  -1.86385475e-01,  -3.06346062e-01],\n",
        "       ..., \n",
        "       [  8.88559768e+00,  -1.87387855e+00,   3.60486323e+00, ...,\n",
-       "          5.26064863e-01,   7.92266039e-02,  -3.67810277e-02],\n",
+       "          4.53632888e-01,   1.67567086e-01,  -4.29655114e-03],\n",
        "       [  1.23372955e+01,  -5.60638035e-01,  -2.65412434e+00, ...,\n",
-       "          5.09470391e-01,   6.27130981e-02,   4.60989132e-02],\n",
+       "          5.10135727e-01,   1.41208897e-01,   7.99277780e-02],\n",
        "       [  8.46195602e+00,  -3.40317219e+00,  -3.58705075e-01, ...,\n",
-       "         -1.44410864e-01,  -4.99696854e-01,  -3.53535785e-01]])"
+       "         -1.00166149e-01,  -4.86610222e-01,  -3.91674675e-01]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -141,10 +141,10 @@
     {
      "data": {
       "text/plain": [
-       "0.96139595868479633"
+       "0.961395952426495"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -167,50 +167,50 @@
      "data": {
       "text/plain": [
        "Proximal Tibial Angle     0.619323\n",
-       "GM_GENIT_DIS_YN           0.617006\n",
-       "GM_CANCER_YN              0.601257\n",
-       "GM_BACK_PAIN_YN           0.536008\n",
-       "GM_DEPRESS_YN             0.509266\n",
-       "GM_HYPCHOL_YN             0.492012\n",
-       "GM_DIABETES_YN            0.490796\n",
-       "PTRT_INTRA_INJECT_YN      0.484307\n",
+       "GM_GENIT_DIS_YN           0.616768\n",
+       "GM_CANCER_YN              0.601135\n",
+       "GM_BACK_PAIN_YN           0.535653\n",
+       "GM_DEPRESS_YN             0.509287\n",
+       "GM_HYPCHOL_YN             0.492039\n",
+       "GM_DIABETES_YN            0.491006\n",
+       "PTRT_INTRA_INJECT_YN      0.484291\n",
        "ST_DEEP_MCL_YN            0.481986\n",
        "PTRT_ARTHRO_YN            0.430309\n",
-       "GM_CARDIO_YN              0.427225\n",
-       "GM_RENAL_DIS_YN           0.410552\n",
-       "GM_HEENT_YN               0.400824\n",
+       "GM_CARDIO_YN              0.427223\n",
+       "GM_HEENT_YN               0.400912\n",
        "ST_POST_MED_CAP_YN        0.400568\n",
-       "PTRT_MENIS_YN             0.366682\n",
-       "ST_POST_LAT_CAP_YN        0.365616\n",
-       "GM_GASTRO_DIS_YN          0.361965\n",
-       "SRG_APPROACH_MIDVASTUS    0.356728\n",
+       "GM_RENAL_DIS_YN           0.398189\n",
+       "ST_POST_LAT_CAP_YN        0.379045\n",
+       "PTRT_MENIS_YN             0.367049\n",
+       "GM_GASTRO_DIS_YN          0.361979\n",
+       "SRG_APPROACH_MIDVASTUS    0.357895\n",
        "PAT_MANAGE_EVERTED        0.351630\n",
        "ANTI_CEMENT               0.344051\n",
-       "GM_OTHER_YN               0.341079\n",
-       "GM_HEMA_DIS_YN            0.332881\n",
+       "GM_OTHER_YN               0.341076\n",
        "DEVIMP_PSFB               0.330203\n",
+       "GM_GOUT_YN                0.326378\n",
        "AP Alignment Angle        0.322633\n",
-       "GM_RESP_DIS_YN            0.320442\n",
-       "GM_NONE_YN                0.311526\n",
+       "GM_RESP_DIS_YN            0.320441\n",
+       "GM_NONE_YN                0.312083\n",
        "GM_HYPTN_YN               0.310955\n",
-       "GM_OSTEO_YN               0.308356\n",
+       "GM_HEMA_DIS_YN            0.309373\n",
        "SEX                       0.301542\n",
+       "GM_OSTEO_YN               0.297525\n",
        "RESECTION_GAPBALANCE      0.295118\n",
        "DEVIMP_CRFB               0.292915\n",
        "PTRT_NONE_YN              0.290182\n",
-       "ST_SYN_YN                 0.282944\n",
-       "GM_END_METABLIC_YN        0.275877\n",
-       "preop PKIP modify         0.275645\n",
+       "ST_SYN_YN                 0.282941\n",
+       "preop PKIP modify         0.279915\n",
+       "GM_END_METABLIC_YN        0.275814\n",
+       "preop KS_PAT_EXP3         0.268498\n",
        "PAT_RESURFACE             0.268084\n",
        "Unnamed: 90               0.268084\n",
-       "GM_GOUT_YN                0.265952\n",
-       "SRG_APPROACH_TRIVECTOR    0.262518\n",
-       "Distal Femoral Angle      0.253961\n",
-       "ST_NONE_YN                0.251376\n",
+       "SRG_APPROACH_TRIVECTOR    0.262516\n",
+       "Distal Femoral Angle      0.253964\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -233,9 +233,9 @@
      "evalue": "name 'PCA_eval' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-5ee1a9ef6bf2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m109\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mPCA_eval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexplained_variance_ratio_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdoPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnoise_variance_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdoPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexplained_variance_ratio_\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mPCA_eval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31m--------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-5ee1a9ef6bf2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m109\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mPCA_eval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexplained_variance_ratio_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdoPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnoise_variance_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdoPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexplained_variance_ratio_\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mPCA_eval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'PCA_eval' is not defined"
      ]
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -274,6 +274,38 @@
     "    column_label = df.columns[len(df.columns)-1]\n",
     "    df.drop(labels=column_label, axis=1,inplace = True)\n",
     "    df.insert(0,column_label,column)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"yes\"\n",
+    "if(x):\n",
+    "    print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "    "
    ]
   }
