Revised MergeFeatures to use columns.

--- a/2_notebooks/features/FR_MergeFeatures.ipynb
+++ b/2_notebooks/features/FR_MergeFeatures.ipynb
@@ -2,91 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "def mergeFeatures(master, features, manual):\n",
-    "    \"\"\"Returns a subset of master that includes:\n",
-    "       1) overlapping items in features\n",
-    "       2) all items of manual\n",
+    "    \"\"\"Returns a subset of columns in master that includes:\n",
+    "       1) overlapping column names in features\n",
+    "       2) all column names in manual\n",
     "    \"\"\"\n",
+    "    master_cols = list(master)\n",
+    "    features_cols = list(features)\n",
+    "    manual_cols = list(manual)\n",
     "    \n",
-    "    boolFeatures = master.isin(features[0].values.tolist()) | master.isin(manual[0].values.tolist())\n",
-    "    combined = pd.DataFrame()\n",
-    "    for i in range(0, len(master)):\n",
-    "        if boolFeatures.iat[i,0]:\n",
-    "            combined = combined.append(pd.DataFrame([master.iat[i,0]]), ignore_index=True)\n",
-    "    return combined"
+    "    final_cols = [val for val in master_cols if (val in features_cols) or (val in manual_cols)]\n",
+    "    return master[final_cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>b</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0\n",
-       "0  a\n",
-       "1  b\n",
-       "2  e"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          a         b         e\n",
+      "0 -1.108731  0.128753 -0.462185\n",
+      "1  0.755388  0.639508  3.044511\n",
+      "2 -0.753539 -0.321553 -0.400461\n",
+      "3 -1.331102 -1.137506 -2.170808\n",
+      "4  0.074863  0.228005 -1.476214\n",
+      "5 -0.454072  1.070981  0.647623\n",
+      "6 -0.057831 -2.027260  1.528527\n",
+      "7  0.505054 -1.265863 -0.133224\n",
+      "8  0.166307  1.927393 -0.219138\n",
+      "9  2.312213 -2.245854  1.661880\n"
+     ]
     }
    ],
    "source": [
     "# Example usage\n",
+    "import numpy as np\n",
     "\n",
-    "master = pd.DataFrame(['a','b','c','d','e'])\n",
-    "features = pd.DataFrame(['a','b','f'])\n",
-    "manual = pd.DataFrame(['e'])\n",
-    "mergeFeatures(master, features, manual)"
+    "master = pd.DataFrame(np.random.randn(10, 5), columns=['a', 'b', 'c', 'd', 'e'])\n",
+    "features = pd.DataFrame(np.random.randn(0, 3), columns=['a', 'b', 'f'])\n",
+    "manual = pd.DataFrame(np.random.randn(0, 1), columns=['e'])\n",
+    "print(mergeFeatures(master, features, manual))"
    ]
   },
   {
